--- a/wwwroot/CSS3/slick.css
+++ b/wwwroot/CSS3/slick.css
@@ -25,7 +25,6 @@
 
     display: block;
     overflow: hidden;
-    height: 90vh;
     margin: 0;
     padding: 0;
 }
